--- a/app/src/main/res/layout/activity_avisos_admin.xml
+++ b/app/src/main/res/layout/activity_avisos_admin.xml
@@ -22,12 +22,12 @@
 
             <TextView
                 android:id="@+id/tv_avisosadmin"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="AVISOS"
+                android:text="@string/avisos"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
 
         <View
             android:id="@+id/divider2"
-            android:layout_width="2in"
+            android:layout_width="350dp"
             android:layout_height="1dp"
             android:background="@color/atarraya"
             android:layout_gravity="center"/>
@@ -50,7 +50,7 @@
                 android:id="@+id/btn_crearaviso_admin"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Crear Nuevo Aviso"
+                android:text="@string/btn_crearaviso_admin"
                 android:padding="5dp"
                 android:background="@drawable/rounded_edittext_focused"
                 android:backgroundTint="#531603"
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="AVISOS REGISTRADOS:"
+                android:text="@string/avisos_registrados"
                 android:textColor="@color/oscuro"
                 android:textSize="18sp" />
 
