--- a/app/src/main/res/layout/activity_calendario_modadmin.xml
+++ b/app/src/main/res/layout/activity_calendario_modadmin.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="INDICACIONES"
+            android:text="@string/indicaciones_calendario"
             android:textAlignment="center"
             />
         <TextView
