--- a/app/src/main/res/layout/activity_crearnuevaactividad_maestro.xml
+++ b/app/src/main/res/layout/activity_crearnuevaactividad_maestro.xml
@@ -115,7 +115,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="137dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:gravity="center"
                 android:orientation="horizontal">
