--- a/app/src/main/res/layout/activity_dasboard_mod_admin.xml
+++ b/app/src/main/res/layout/activity_dasboard_mod_admin.xml
@@ -41,11 +41,11 @@
                     android:text="@string/bienvenido"
                     android:textSize="15sp" />
                 <TextView
-                    android:id="@+id/txtNombreAcceso_admin"
+                    android:id="@+id/tv_NombreAcceso_admin"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
-                    android:hint="Nombre del Maestro"
-                    android:layout_marginLeft="10dp"
+                    android:hint="@string/nombre_del_administrador"
+                    android:layout_marginStart="10dp"
                     android:textSize="15sp"/>
             </LinearLayout>
             <LinearLayout
@@ -61,6 +61,7 @@
                     <androidx.cardview.widget.CardView
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
+                        android:focusable="true"
                         android:id="@+id/cv_administracion"
                         android:layout_width="match_parent"
                         android:layout_height="170dp"
@@ -83,7 +84,7 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:layout_marginTop="10dp"
-                                android:text="Administración de todo el sistema"/>
+                                android:text="@string/admin_card1"/>
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
@@ -98,6 +99,7 @@
                         android:id="@+id/cv_calendarioagenda_admin"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
+                        android:focusable="true"
                         android:layout_width="match_parent"
                         android:layout_height="170dp"
                         android:layout_margin="10dp">
@@ -119,7 +121,7 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:layout_marginTop="10dp"
-                                android:text="Calendario y Agenda"/>
+                                android:text="@string/admin_card2"/>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -134,6 +136,7 @@
                         android:id="@+id/cv_menudiario_admin"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
+                        android:focusable="true"
                         android:layout_width="match_parent"
                         android:layout_height="170dp"
                         android:layout_margin="10dp">
@@ -155,7 +158,7 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:layout_marginTop="10dp"
-                                android:text="Menú Diario"/>
+                                android:text="@string/admin_card3"/>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
