--- a/app/src/main/res/layout/activity_dashboard_comida_admin.xml
+++ b/app/src/main/res/layout/activity_dashboard_comida_admin.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.dashad_usuariosroles"
+    tools:context=".layout.dashboard_comidaAdmin"
     android:orientation="vertical"
     android:padding="10dp"
     android:background="#fcfcfc"
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cv_plantadocente"
+                android:id="@+id/cv_agregarmenu"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_margin="10dp"
@@ -43,8 +43,8 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:background="@drawable/cerclebackgroundmodadmin"
-                        android:padding="10dp"
-                        android:src="@drawable/ic_plantadocente" />
+                        android:padding="20dp"
+                        android:src="@drawable/ic_crearmenu" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="@string/cv_plantadocente"
+                        android:text="@string/agregar_menu"
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
@@ -68,7 +68,7 @@
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cv_rolesdocente"
+                android:id="@+id/cv_consultarmenu"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_margin="10dp"
@@ -86,8 +86,8 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:background="@drawable/cerclebackgroundmodadmin"
-                        android:padding="10dp"
-                        android:src="@drawable/ic_roles" />
+                        android:padding="20dp"
+                        android:src="@drawable/ic_menublanco" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -95,7 +95,7 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="@string/cv_rolesdocente"
+                        android:text="@string/consultar_menu"
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </LinearLayout>
