--- a/app/src/main/res/layout/activity_devocionales_admin.xml
+++ b/app/src/main/res/layout/activity_devocionales_admin.xml
@@ -31,12 +31,12 @@
 
                 <TextView
                     android:id="@+id/tv_devocionales"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="DEVOCIONALES"
+                    android:text="@string/devocionales"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
 
             <View
                 android:id="@+id/divider2"
-                android:layout_width="2in"
+                android:layout_width="350dp"
                 android:layout_height="1dp"
                 android:background="@color/atarraya"
                 android:layout_gravity="center"/>
@@ -61,17 +61,17 @@
                     android:layout_height="wrap_content"
                     android:background="@color/atarraya"
                     android:layout_margin="10dp"
-                    android:text="Agregar devocional"
+                    android:text="@string/btn_agregardevocional"
                     android:textColor="@color/blanco"
                     android:textStyle="bold"
-                    android:paddingEnd="20dp"
-                    android:drawableRight="@drawable/ic_devocionales"/>
+                    android:padding="20dp"
+                    android:drawableEnd="@drawable/ic_devocionales"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="504dp"
                 android:layout_margin="15dp"
                 android:orientation="vertical">
 
@@ -83,29 +83,15 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Devocionales Programados :"
+                        android:text="@string/devocionales_programados"
                         android:textColor="@color/oscuro"
                         android:textSize="18sp" />
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="15dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="FECHA"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="GRADO ENCARGADO"
-                        android:layout_marginStart="55dp"/>
-                </LinearLayout>
+
                 <ListView
                     android:id="@+id/ltv_devocionales"
                     android:layout_width="match_parent"
-                    android:layout_height="518dp" />
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
         </LinearLayout>
