--- a/app/src/main/res/layout/activity_registrardocente_admin.xml
+++ b/app/src/main/res/layout/activity_registrardocente_admin.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,13 +30,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_datosinstitucion"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_datosdocente"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="DATOS INSTITUCIÓN"
+                    android:text="@string/datos_docente"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
 
             <View
                 android:id="@+id/divider2"
-                android:layout_width="2in"
+                android:layout_width="350dp"
                 android:layout_height="1dp"
                 android:background="@color/atarraya"
                 android:layout_gravity="center"/>
@@ -59,7 +59,7 @@
                     android:layout_width="340dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="La foto de perfil y la contraseña deben ser cambiadas por el docente.La contraseña por defecto es d0centes@tarraya2020"
+                    android:text="@string/indicaciones_datosdoc"
                     android:textAlignment="center" />
 
                 <LinearLayout
@@ -71,7 +71,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dui :"
+                        android:text="@string/numeroDui"
                         android:textColor="@color/oscuro"
                         android:textSize="15sp" />
 
@@ -80,7 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="40dp"
-                        android:hint="Escribir sin guiones"
+                        android:hint="@string/edt_duimaestro"
                         android:maxLength="9" />
                 </LinearLayout>
 
@@ -93,7 +93,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nombres :"
+                        android:text="@string/nombresmaestro"
                         android:textColor="@color/oscuro"
                         android:textSize="15sp" />
 
@@ -113,7 +113,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Apellidos:"
+                        android:text="@string/apellidosmaestros"
                         android:textColor="@color/oscuro"
                         android:textSize="15sp" />
 
@@ -133,7 +133,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Email:"
+                        android:text="@string/emailmaestros"
                         android:textColor="@color/oscuro"
                         android:textSize="15sp" />
 
@@ -153,11 +153,12 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn_guardardatos"
-                        android:layout_width="150dp"
+                        android:id="@+id/btn_guardardatosmaestro"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_edittext_focused"
-                        android:text="GUARDAR" />
+                        android:text="@string/guardardatosdelmaestro"
+                        android:padding="10dp"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
